--- a/angular-front/src/app/register/components/register/register.component.html
+++ b/angular-front/src/app/register/components/register/register.component.html
@@ -2,11 +2,10 @@
   <div class="form-container p-5">
 
     <div class="form-presentation text-center">
-      <h1 i18n>Dear guest</h1>
-      <p i18n>We would be honored by your presence and look forward to see you there.<br>
-        Kindly RSVP to let us know if you will be able to attend. <br>
-        Your response will help us ensure that the event is a success. <br>
-        <b>Thank you!</b>
+      <h1 i18n>Dear Family and Friends</h1>
+      <p i18n>To help us with the final preparations,<br>
+         kindly please RSVP by <b>31st of match would</b> to let us know if you will be able to attend.<br>
+        Your response will be greatly appreciated.
       </p>
     </div>
 
