--- a/angular-front/src/app/shared/footer/footer.component.html
+++ b/angular-front/src/app/shared/footer/footer.component.html
@@ -31,7 +31,7 @@
         </div>
       </div>
       <div class="col-md-3 col-sm-3 col-12 d-flex flex-column justify-content-center align-items-center mt-4">
-        <h5>Made by Clement & Huyen 2023</h5>
+        <p>Clement & Huyen 2023</p>
         <h5>&copy; CDX</h5>
       </div>
     </div>
