feature#45: last changes

--- a/angular-front/src/app/home/components/countdown-group/countdown-group.component.html
+++ b/angular-front/src/app/home/components/countdown-group/countdown-group.component.html
@@ -1,7 +1,7 @@
 <div class="countdown d-flex flex-column align-items-center">
   <div class="countdown-title d-flex flex-column align-items-center">
     <div class="countdown-text-stick">
-      <h1 class="section-heading gold text-center" i18n>Celebrating our Love</h1>
+      <h1 class="section-heading gold text-center" i18n>Celebrating Our Love</h1>
     </div>
     <img class="us" src="/assets/images/us2.png" alt="us" />
   </div>
@@ -40,6 +40,6 @@
     </div>
   </div>
   <button class="light-button" data-style="no-move" routerLink="/register" routerLinkActive="active-link" i18n>
-    INSCRIPTION
+    RSVP
   </button>
 </div>
