--- a/angular-front/src/app/shared/header/header.component.html
+++ b/angular-front/src/app/shared/header/header.component.html
@@ -15,9 +15,9 @@
   <div class="d-flex justify-content-center align-items-center unselectable-content">
     <div class="navbar-links row col-12 col-sm-12 col-md-10 col-lg-10 col-xl-10 col-xxl-10">
       <a class="link col text-center" routerLink="/home" routerLinkActive="active-link">HOME</a>
-      <a class="link col text-center" routerLink="/information" routerLinkActive="active-link">INFO</a>
-      <a class="link col text-center" routerLink="/register" routerLinkActive="active-link">FORM</a>
-      <a class="link col text-center" routerLink="/photo" routerLinkActive="active-link">ALBUM</a>
+      <a class="link col text-center" routerLink="/information" routerLinkActive="active-link">DETAILS</a>
+      <a class="link col text-center" routerLink="/register" routerLinkActive="active-link">RSVP</a>
+      <a class="link col text-center" routerLink="/photo" routerLinkActive="active-link">GALLERY</a>
     </div>
   </div>
 
