--- a/src/app/home/components/countdown-group/countdown-group.component.html
+++ b/src/app/home/components/countdown-group/countdown-group.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="unselectable-content d-flex justify-content-center align-items-center">
     <div class="d-flex flex-column align-items-center">
-      <app-countdown-custom [value]="daysToDday"></app-countdown-custom>
+      <app-countdown-custom [value]="daysToDday" [isNotSeconds]="true"></app-countdown-custom>
       <div class="d-flex justify-content-center mt-2">
         <span class="clock-unit mt-2" i18n>
           Days
@@ -15,7 +15,7 @@
       </div>
     </div>
     <div class="d-flex flex-column align-items-center">
-      <app-countdown-custom [value]="hoursToDday"></app-countdown-custom>
+      <app-countdown-custom [value]="hoursToDday" [isNotSeconds]="true"></app-countdown-custom>
       <div class="d-flex justify-content-center mt-2">
         <span class="clock-unit mt-2" i18n>
           Hours
@@ -23,7 +23,7 @@
       </div>
     </div>
     <div class="d-flex flex-column align-items-center">
-      <app-countdown-custom [value]="minutesToDday"></app-countdown-custom>
+      <app-countdown-custom [value]="minutesToDday" [isNotSeconds]="true"></app-countdown-custom>
       <div class="d-flex justify-content-center mt-2">
         <span class="clock-unit mt-2" i18n>
           Minutes
@@ -31,7 +31,7 @@
       </div>
     </div>
     <div class="d-flex flex-column align-items-center">
-      <app-countdown-custom [value]="secondsToDday"></app-countdown-custom>
+      <app-countdown-custom [value]="secondsToDday" [isNotSeconds]="false"></app-countdown-custom>
       <div class="d-flex justify-content-center mt-2">
         <span class="clock-unit mt-2" i18n>
           Seconds
