--- a/src/app/home/components/hero/hero.component.html
+++ b/src/app/home/components/hero/hero.component.html
@@ -40,5 +40,10 @@
       <app-bend-title-bottom></app-bend-title-bottom>
     </div>
   </div>
+  <div class="welcome-text text-center mt-5">
+    <p>We would be honored if you could join us to celebrate our wedding day.</p>
+    <p>Please save the date and RSVP through our wedding website.</p>
+    <p>We can't wait to share this special day with you.</p>
+  </div>
 </section>
 <div class="bottom"></div>
