--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -50,10 +50,10 @@
             </a></li>
           <li> <a class="blue-link text-link unselectable-content" routerLink="/register"
               routerLinkActive="active-link">
-              <span i18n>Register</span>
+              <span i18n>Registry</span>
             </a></li>
           <li> <a class="blue-link text-link unselectable-content" routerLink="/photo" routerLinkActive="active-link">
-              <span i18n>Album</span>
+              <span i18n>Gallery</span>
             </a></li>
         </ul>
       </div>
