--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,8 +11,8 @@ $third-secondary-blue-shadow-dark-2: #90ddd1;
 $green-blue-color: #43cea2;
 $light-blue-color: #E3FFFC;
 //FIXME change gold color
-$primary-gold-color: #EDB24C;
-$secondary-gold-color:#f1a624;
+$primary-gold-color: #FFC000;
+$secondary-gold-color:#ddaa0f;
 //gold e2c080
 $primary-negative-color:#D98F9A;
 $prmary-positive-color:#8FD9A9;
