--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,5 +1,5 @@
-@import '~bootstrap/scss/bootstrap';
-@import "variables.scss";
+@import 'bootstrap/scss/bootstrap';
+@import 'variables.scss';
 
 .footer-container {
   background-color: $white-color;
