--- a/src/app/shared/maintenance/maintenance/maintenance.component.scss
+++ b/src/app/shared/maintenance/maintenance/maintenance.component.scss
@@ -1,5 +1,5 @@
-@import "variables.scss";
-@import '~bootstrap/scss/bootstrap';
+@import 'variables.scss';
+@import 'bootstrap/scss/bootstrap';
 
 .landscape {
   width: 100%;
