i18n and countdown fix

--- a/src/app/home/components/hero/hero.component.html
+++ b/src/app/home/components/hero/hero.component.html
@@ -41,9 +41,9 @@
     </div>
   </div>
   <div class="welcome-text text-center mt-5">
-    <p>We would be honored if you could join us to celebrate our wedding day.</p>
-    <p>Please save the date and RSVP through our wedding website.</p>
-    <p>We can't wait to share this special day with you.</p>
+    <p i18n>We would be honored if you could join us to celebrate our wedding day.</p>
+    <p i18n>Please save the date and RSVP through our wedding website.</p>
+    <p i18n>We can't wait to share this special day with you.</p>
   </div>
 </section>
 <div class="bottom"></div>
