--- a/src/app/shared/maintenance/maintenance/maintenance.component.html
+++ b/src/app/shared/maintenance/maintenance/maintenance.component.html
@@ -2,8 +2,8 @@
   <img class="landscape" src="/assets/images/maintenance-landscape-before.svg" alt="maintenance landscape">
   <div class="d-flex flex-column justify-content-center align-items-center mb-5">
     <div class="row text-center pb-5 pt-4">
-      <h5 class="maintenance-title">This page is under construction</h5>
-      <p class="maintenance-text">We are working on it</p>
+      <h5 class="maintenance-title" i18n>This page is under construction</h5>
+      <p class="maintenance-text" i18n>We are working on it</p>
     </div>
   </div>
 </div>
