--- a/src/app/home/components/countdown-custom/countdown-custom.component.scss
+++ b/src/app/home/components/countdown-custom/countdown-custom.component.scss
@@ -31,7 +31,7 @@
 .palette-back::after {
   display: block;
   height: $halfPaletteHeight;
-  color: $secondary-gold-color;
+  color: $primary-gold-color;
   font-family: $time-font;
   padding: 0.25em 0.25em;
   border-radius: $borderRadius $borderRadius 0 0;
