--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -21,6 +21,10 @@ h6 {
   font-family: $heading-font;
 }
 
+
+label {
+  margin-left: 12px;
+}
 .subtitle {
   font-family: $heading-font;
   @include font-size(1.5vw);
