--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -1,4 +1,3 @@
-@import 'bootstrap/scss/bootstrap';
 @import 'variables.scss';
 
 .footer-container {
@@ -31,7 +30,7 @@
 
   .contact {
     .contact-header {
-      @include font-size(2rem);
+      font-size: 2rem;
     }
 
     ul {
