--- a/src/app/shared/maintenance/maintenance/maintenance.component.scss
+++ b/src/app/shared/maintenance/maintenance/maintenance.component.scss
@@ -1,5 +1,4 @@
 @import 'variables.scss';
-@import 'bootstrap/scss/bootstrap';
 
 .landscape {
   width: 100%;
@@ -8,11 +7,11 @@
 
 .maintenance-title {
   color: $secondary-gold-color;
-  @include font-size(4.2vw);
+  font-size: 4.2vw;
 }
 
 .maintenance-text {
-  @include font-size(2.2vw);
+  font-size: 2.2vw;
 }
 
 @media only screen and (max-width: 768px) {
