--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -42,47 +42,47 @@ $border-radius: 25px;
 /* FONTS */
 @font-face {
   font-family: "josefin-light-italic";
-  src: local("josefin-light-italic-font"), url(/assets/fonts/josefin/JosefinSans-LightItalic.ttf) format("truetype");
+  src: url("/assets/fonts/josefin/JosefinSans-LightItalic.woff") format("woff");
 }
 
 @font-face {
   font-family: "josefin-light";
-  src: local("josefin-light-font"), url(/assets/fonts/josefin/JosefinSans-Light.ttf) format("truetype");
+  src: url("/assets/fonts/JosefinSans-Light.woff") format("woff");
 }
 
 @font-face {
   font-family: "josefin-medium";
-  src: local("josefin-medium-font"), url(/assets/fonts/josefin/JosefinSans-Medium.ttf) format("truetype");
+  src: url("/assets/fonts/JosefinSans-Medium.woff") format("woff");
 }
 
 @font-face {
   font-family: "josefin-medium-italic";
-  src: local("josefin-medium-italic-font"), url(/assets/fonts/josefin/JosefinSans-MediumItalic.ttf) format("truetype");
+  src: url("/assets/fonts/JosefinSans-MediumItalic.woff") format("woff");
 }
 
 @font-face {
   font-family: "josefin-regular";
-  src: local("josefin-regular"), url(/assets/fonts/josefin/JosefinSans-Regular.ttf) format("truetype");
+  src: url("/assets/fonts/JosefinSans-Regular.woff") format("woff");
 }
 
 @font-face {
   font-family: "cherolina";
-  src: local("cherolina-font"), url(/assets/fonts/Cherolina.ttf) format("truetype");
+  src: url("/assets/fonts/Cherolina.woff") format("woff");
 }
 
 @font-face {
   font-family: "fenomen";
-  src: local("fenomen-font"), url(/assets/fonts/Fenomen.otf) format("opentype");
+  src: url("/assets/fonts/Fenomen.woff") format("woff");
 }
 
 @font-face {
   font-family: "saudagar";
-  src: local("saudagar-font"), url(/assets/fonts/Saudagar.ttf) format("truetype");
+  src: url("/assets/fonts/Saudagar.woff") format("woff");
 }
 
 @font-face {
   font-family: "utopia";
-  src: local("utopia-font"), url(/assets/fonts/Utopia.otf) format("opentype");
+  src: url("/assets/fonts/Utopia.woff") format("woff");
 }
 
 $stylish-font: 'cherolina';
