clean after dockerise project

--- a/src/app/home/components/countdown-group/countdown-group.component.html
+++ b/src/app/home/components/countdown-group/countdown-group.component.html
@@ -3,7 +3,7 @@
     <div class="countdown-text-stick">
       <h1 class="section-heading gold text-center" i18n>Celebrating Our Love</h1>
     </div>
-    <img class="us" src="/assets/images/us2.png" alt="us" />
+    <img class="us" src="/assets/images/us.png" alt="us" />
   </div>
   <div class="unselectable-content d-flex justify-content-center align-items-center">
     <div class="d-flex flex-column align-items-center">
