--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,7 +7,7 @@ $third-secondary-blue-color: #7dc0b6;
 $third-secondary-blue-shadow-clear-1: #7ab8af;
 $third-secondary-blue-shadow-clear-2: #a4faed;
 $third-secondary-blue-shadow-dark-1: #6aa39b;
-$third-secondary-blue-shadow-dark-2: #90ddd1;
+$third-secondary-blue-shadow-dark-2: #7bc4b9;
 $green-blue-color: #43cea2;
 $light-blue-color: #E3FFFC;
 //FIXME change gold color
