--- a/src/styles/_font.scss
+++ b/src/styles/_font.scss
@@ -15,6 +15,11 @@
 }
 
 @font-face {
+  font-family: "josefin-regular";
+  src: url("/assets/fonts/JosefinSans-Regular.woff") format("woff");
+}
+
+@font-face {
   font-family: "josefin-medium-italic";
   src: url("/assets/fonts/JosefinSans-MediumItalic.woff") format("woff");
 }
