feature#57: Angular 18 upgrade project

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -17,7 +17,7 @@
             <li>
               <p class="contact-information d-flex align-items-center">
                 <i class="las la-at"></i>
-                <a class="" href="mailto:cy.gibertperso@gmail.com">cy.gibertperso@gmail.com</a>
+                <a class="" href="mailto:cy.gibertperso@gmail.com">cy.gibertperso&#64;gmail.com</a>
               </p>
             </li>
             <li>
