--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,5 +1,5 @@
 @import "variables.scss";
-@import "../../../node_modules/rfs/scss";
+@import "../../node_modules/rfs/scss";
 
 .navbar-title {
   position: relative;
