--- a/src/app/home/components/countdown-group/countdown-group.component.scss
+++ b/src/app/home/components/countdown-group/countdown-group.component.scss
@@ -1,5 +1,5 @@
 @import "variables.scss";
-@import "../../../node_modules/rfs/scss";
+@import "../../node_modules/rfs/scss.scss";
 
 .countdown {
   // background: #1db1e2;
