--- a/src/app/register/components/register/register.component.scss
+++ b/src/app/register/components/register/register.component.scss
@@ -1,5 +1,5 @@
 @import "variables.scss";
-@import "../../../node_modules/rfs/scss";
+@import "../../node_modules/rfs/scss.scss";
 
 .form-container {
   background-color: $grey-color;
